Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -25,9 +25,11 @@ As of yet, no one understands why parthenogenesis fails in mammals who receive c
 While studying the effect of an oncogene, c-myc, they came across a peculiar animal. This particular rodent expressed their gene containing c-myc, a transcription factor important (potentially) to cycle progression\citep{cymc}, in heart tissue, but \textit{only in males}, nowhere else. They set out to further characterize this oddity, with an eye to the phenomena of methylation. Previous research had shown genes methylated when inherited from the mother but not the father \citep{surani}, without seeing an expression consequence.
 
 Using nearly 700 descendants of the mouse, they assayed for expression. They sampled RNA
-from a host of organs, and mixed them with a complementary cDNA probe spanning 365bp segment between two exons. After digestion with RNAse, protected by hybridization between strands, only RNA with complementary sequences remained. Among the remnants were fragments for RNA processed to the first two exons, and processed transgene. The latter only showed in the heart. They then crossed animals who either carried or did not carry this transgene, and surprisingly, noted among offspring carrying the gene: if the father carried, but not the mother, there was 100\% expression, and vice-versa, if the mother, but not the father, carried, there was 0\% expression, both across many animals. 
+from a host of organs, and mixed them with a complementary cDNA probe spanning 365bp segment between two exons. After digestion with RNAse, protected by hybridization between strands, only RNA with complementary sequences remained. Among the remnants were fragments of RNA for the two c-myc exons, and for the processed transgene. The latter only showed in the heart. They then crossed animals who either carried or did not carry this transgene, and surprisingly, noted among offspring carrying the gene: if the father carried, but not the mother, there was 100\% expression, and vice-versa, if the mother, but not the father, carried, there was 0\% expression, both across many animals. 
 
-To pull the lid back further, they also examined DNA substrata giving rise to these RNA. Previous work had implied methylation might be the culprit. Stetching back a few years prior, it had been noticed that sperm pronuclear material modified methylation\citep{} and that methylation seemed to have an effect on transcription\citep{}. Hence, Swain, Stewart, and Leder chose to 
+To pull the lid back further, they also examined DNA substrata giving rise to these RNA. Previous work had implied methylation might be the culprit. Stretching back a few years prior, it had been noticed that sperm pronuclear material modified methylation\citep{} and that methylation seemed to have an effect on transcription\citep{}. Hence, Swain, Stewart, and Leder chose to apply an enzyme that could recognize/cut transgene sequences; not, however, if they were methylated. Looking at the fragments on a Southern blot, the genetic material restricted into smaller fragments as described above---exclusively for transgenes passed from crosses of a male carrier with non-carrier females, not vice-versa. Additionally, the undermethylation pattern reared, again, only in the heart. This squared the circle, demonstrating 100\% correlation between the transgene's methylation status and expression.
+
+But many questions remain unanswered. 
 
 % Critically, this may confirm our suspicions that methylation plays a role in the process.
 
